dav: kill SoupOutputStream

SoupOutputStream was never particularly useful, since we ended up not
doing chunked requests (since server support for them is mostly
nonexistent). So kill SoupOutputStream off and just use a
GMemoryOutputStream instead.

https://bugzilla.gnome.org/show_bug.cgi?id=687757

Signed-off-by: Tomas Bzatek <tbzatek@redhat.com>